#100: Writing error report fails when target directory does not exist